--- a/templates/index_template.html
+++ b/templates/index_template.html
@@ -1,4 +1,5 @@
 {% block preamble %}
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="static/css/styles.css" rel="stylesheet">
   <script type="text/javascript" src="static/js/functions.js"></script>
 {% endblock %}
