--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,11 @@
-{% block preamble %}
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="static/css/styles.css" rel="stylesheet">
-  <script type="text/javascript" src="static/js/functions.js"></script>
-  <script type="text/javascript" src="static/js/scalebar_functions.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.8.1/proj4.min.js"></script>
+{% block postamble %}
+  <meta name="description" content="Summary of biketrip in Northern Spain 2022 with interactive map." />
+  <meta name="author" content="Jonas Grave Kristensen" />
+  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
+  <link href="https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.css" rel="stylesheet">
+  <script src="https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.js"></script>
+  <script type="text/javascript" src="{{ root }}/static/js/functions.js"></script>
+  <link href="{{ root }}/static/css/styles.css" rel="stylesheet">
 {% endblock %}
 {% block contents %}
 <div class="container">
@@ -13,35 +15,26 @@
   <p>
     In September 2022 we were a small group of enthusiastic road bike riders who did a trip in Northern Spain. We covered a total of 827 km and 15,800 meters of ascending, which was split into 8 stages. A great guy and friend of us drove a van as our support vehicle and we stayed in hotels during the nights where those accommodations had been planned in advance (one stop-over was private accommodation, friends to one in the group). Every third day was a rest day. With start in Vegadeo and finishing in Unquera, we were mainly in the Asturias community, but also went into León to the south and Cantabria to the east. 
   </p>
-  <div class="map-container outline">
-    {{ embed(roots.map) }}
-    <div class="btn-group">
-      <button id="zoom-in" class="map-btn" onclick="zoomBtnClick(this.id)">
-        <img src="static/img/plus.png" alt="Profile">
-        <span class="tooltip">Zoom in</span>
-      </button>
-      <button id="zoom-out" class="map-btn" onclick="zoomBtnClick(this.id)">
-        <img src="static/img/minus.png" alt="Profile">
-        <span class="tooltip">Zoom out</span>
-      </button>
-      <button id="reset" class="map-btn" onclick="resetBtnClick()">
-        <img src="static/img/reset.png" alt="Profile">
-        <span class="tooltip">Reset</span>
-      </button>
+  <div class="map-container">
+    <div id="map"></div>
+    <div id="location-marker">
+      <svg id="svg-location-marker">
+        <circle id="svg-circle" cx="8" cy="8" r="5" />
+      </svg>
     </div>
   </div>
   <div>
     <p>
-      Plot below shows the elevation profile of either the whole trip, or an individual stage. One can select a stage for viewing either by clicking on the stage on the map above or the individual stages below. Observe that the elevations are from bike computer GPS files, hence they might not match 100% to actual elevations. 
+      Plot below shows the elevation profile of either the whole trip, or an individual stage. One can select a stage for viewing either by clicking on the stage on the map above or on one of the buttons below. Hover profile elevation plot to get information regarding elevation and distance and location on the map. Observe that the elevations are from bike computer GPS files, hence they might not match 100% to actual elevations. 
     </p>
     <div class="outline">
       <h5 class="elevation-plot-heading"></h5>
-      {{ embed(roots.elevation) }}
+      {{ embed(roots.elevation_plot) }}
     </div>
   </div>
   <div class="stages-layout">
     {% for stage, data in stages.items() %}
-    <p class="stage-header" stageid="{{ stage }}">
+    <p class="stage-header">
       {{ stage }}: {{ data.start }} to {{ data.finish }} - {{ data.distance }} km
     </p>
     <div class="stage-layout">
@@ -52,8 +45,9 @@
         Lowest elevation: {{ "{:,}".format(data.min_elevation) }} msl
       </p>
       <span class="align-center">
-        <button id="profile" class="profile-btn" onclick="showProfile('{{ stage }}')" >
-          <img src="static/img/profile2_filled.svg" alt="Profile">
+        <button id="profile" class="profile-btn" onclick="updateElevationSrc('{{ stage }}')" type="button">
+          <img src="static/img/profile.svg">
+          Profile
         </button>
       </span>
     </div>
