Add Taptool to elevation plot. Updated plot and btn styling.

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
   </div>
   <div>
     <p>
-      Plot below shows the elevation profile of either the whole trip, or an individual stage. One can select a stage for viewing either by clicking on the stage on the map above or on one of the buttons below. Hover profile elevation plot to get information regarding elevation and distance and location on the map. Observe that the elevations are from bike computer GPS files, hence they might not match 100% to actual elevations. 
+      Plot below shows the elevation profile of either the whole trip, or an individual stage. One can select a stage for viewing either by clicking on the stage on the map above, click on the elevation plot below if all stages are shown or on one of the buttons below. Hover the profile elevation plot to get information regarding elevation and distance and location on the map. Observe that the elevations are from bike computer GPS files, hence they might not match 100% to actual elevations. 
     </p>
     <div class="outline">
       <h5 class="elevation-plot-heading"></h5>
