--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -60,14 +60,15 @@ button  {
   text-transform: none;
   -webkit-appearance: button;
   cursor: pointer;
-  border: 2px solid #444444;
+  border: none;
   display: inline-flex;
   justify-content: center;
   align-items: center;
+  color: #444444;
 }
 
 button:hover {
-  background-color: grey;
+  background-color: darkgrey;
 }
 
 .container {
@@ -79,9 +80,8 @@ button:hover {
 }
 
 .outline {
-  border: 1px solid black;
-  padding: 5px;
-  background-color: white;
+  padding: 4px;
+  background-color: linen;
 }
 
 .elevation-plot-heading {
@@ -166,12 +166,10 @@ svg {
   padding-left: 16px;
   padding-right: 16px;
   height: 36px;
-  border: 2px solid #444444;
-  background-color: white;
+  background-color: linen;
 }
 
 .profile-btn img {
-  width: 36px;
   margin-right: 8px;
 }
 
